--- a/index.html
+++ b/index.html
@@ -2,277 +2,242 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<title>Love Gift</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>For You ❤️</title>
 
 <style>
 *{
   margin:0;
   padding:0;
   box-sizing:border-box;
-  font-family:Segoe UI,sans-serif;
+  user-select:none;
 }
-
 body{
   background:black;
   overflow:hidden;
-  color:red;
+  font-family: 'Segoe UI', sans-serif;
 }
 
-/* ---------------- SLIDES ---------------- */
+/* ---------- SLIDES ---------- */
 .slide{
   position:absolute;
   inset:0;
-  background:black;
   display:flex;
-  justify-content:center;
   align-items:center;
-  transition:transform 0.9s ease, opacity 0.9s ease;
-  transform:scale(0.95);
-  opacity:0;
-  pointer-events:none;
+  justify-content:center;
+  background:black;
+  transform:translateX(100%);
+  transition:transform 1.2s ease;
 }
+.slide.active{ transform:translateX(0); }
+.slide.exit-left{ transform:translateX(-100%); }
+.slide.exit-right{ transform:translateX(100%); }
 
-.slide.active{
-  transform:scale(1);
-  opacity:1;
-  pointer-events:auto;
+/* ---------- 3D OBJECT LOOK ---------- */
+.object{
+  max-width:60%;
+  filter:
+    drop-shadow(0 40px 60px rgba(255,0,0,0.25))
+    drop-shadow(0 10px 20px rgba(0,0,0,0.8));
+  animation: float 3.5s ease-in-out infinite;
 }
-
-/* IN / OUT TYPES */
-.slide.from-inside{ transform:scale(0.2); }
-.slide.from-inside.active{ transform:scale(1); }
-
-.slide.out-inside{ transform:scale(1); }
-.slide.out-inside.exit{ transform:scale(0.2); opacity:0; }
-
-/* ---------------- 3D GIFT BOX ---------------- */
-.gift3d{
-  width:180px;
-  height:180px;
-  background:linear-gradient(145deg,#ff0000,#b30000);
-  transform:rotateX(15deg) rotateY(-20deg);
-  box-shadow:
-    -20px 20px 40px rgba(255,0,0,0.4),
-    inset -10px -10px 20px rgba(0,0,0,0.3);
-  position:relative;
-}
-
-.gift3d::before{
-  content:'';
-  position:absolute;
-  inset:0;
-  border:6px solid #ff4d4d;
-}
-
-.gift3d::after{
-  content:'';
-  position:absolute;
-  width:20px;
-  height:100%;
-  background:#ff8080;
-  left:50%;
-  transform:translateX(-50%);
-}
-
-/* ---------------- HEARTS ---------------- */
-.hearts{
-  position:absolute;
-  inset:0;
-  pointer-events:none;
-}
-
-.heart{
-  position:absolute;
-  font-size:18px;
-  color:red;
-  opacity:0.8;
-  animation:float 6s linear infinite;
-}
-
 @keyframes float{
-  from{transform:translateY(110vh);}
-  to{transform:translateY(-10vh);}
+  0%,100%{ transform:translateY(0); }
+  50%{ transform:translateY(-18px); }
 }
 
-/* ---------------- SLIDE 2 PHOTOS ---------------- */
-.photos{
-  width:100%;
-  height:100%;
-  padding:20px;
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-  grid-template-rows:repeat(3,1fr);
-  gap:12px;
+/* ---------- PHOTO ---------- */
+.photo{
+  max-width:55%;
+  border-radius:14px;
+  filter:
+    drop-shadow(0 25px 50px rgba(255,0,0,0.35))
+    saturate(1.2);
 }
 
-.photos img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  border:3px solid red;
-  border-radius:12px;
-  animation:photoIn 0.7s ease forwards;
-}
-
-@keyframes photoIn{
-  from{opacity:0;transform:scale(0.4);}
-  to{opacity:1;transform:scale(1);}
-}
-
-/* ---------------- REAL LETTER ---------------- */
+/* ---------- LETTER ---------- */
 .letter{
-  width:85%;
-  height:65%;
-  background:#fff8f0;
-  color:black;
-  border-radius:6px;
-  box-shadow:0 30px 60px rgba(0,0,0,0.6);
-  transform:rotate(-2deg);
-  animation:fly 1.2s ease forwards;
+  max-width:60%;
+  animation: fly 4s ease-in-out infinite;
 }
-
 @keyframes fly{
-  from{transform:translateY(-150%) rotate(10deg);}
-  to{transform:translateY(0) rotate(-2deg);}
+  0%,100%{ transform:translateY(0) rotate(-1deg); }
+  50%{ transform:translateY(-30px) rotate(1deg); }
 }
 
-/* ---------------- MESSAGE SLIDE ---------------- */
-.message-slide{
-  flex-direction:column;
+/* ---------- MESSAGE ---------- */
+.message-box{
+  width:90%;
+  max-height:85%;
   overflow-y:auto;
-  padding:30px 20px 80px;
-}
-
-.message{
-  font-size:20px;
-  line-height:1.7;
-}
-
-.big-love{
-  margin:40px auto;
-  font-size:42px;
   color:red;
-  border:4px solid white;
-  padding:12px 24px;
-  animation:borderPulse 1s infinite alternate;
+  font-size:1.2rem;
+  line-height:1.6;
+  padding:20px;
 }
+.typewriter span{
+  opacity:0;
+  animation: show 0.05s forwards;
+}
+@keyframes show{ to{ opacity:1; } }
 
-@keyframes borderPulse{
-  to{border-color:pink;}
+.final-love{
+  margin-top:40px;
+  text-align:center;
+  font-size:3rem;
+  color:red;
+  text-shadow:
+    0 0 0 white,
+    0 0 20px pink;
+  animation: glow 2s infinite alternate;
+}
+@keyframes glow{
+  from{ text-shadow:0 0 2px white; }
+  to{ text-shadow:0 0 25px pink; }
 }
 
 .signature{
-  margin-top:40px;
+  margin-top:60px;
   text-align:right;
-  font-size:18px;
+  font-size:1.4rem;
+  color:red;
+  opacity:0;
+  animation: appear 1.5s forwards;
+  animation-delay:1s;
 }
+@keyframes appear{ to{ opacity:1; } }
 
-/* ---------------- NAV CLICK ZONES ---------------- */
-.nav{
-  position:fixed;
-  top:0;
-  bottom:0;
-  width:50%;
-  z-index:10;
+/* ---------- HEART CANVAS ---------- */
+canvas{
+  position:absolute;
+  inset:0;
+  pointer-events:none;
 }
-
-.nav.left{left:0;}
-.nav.right{right:0;}
 </style>
 </head>
 
 <body>
 
-<div class="nav left"></div>
-<div class="nav right"></div>
+<canvas id="hearts"></canvas>
 
 <!-- SLIDE 1 -->
 <div class="slide active">
-  <div class="gift3d"></div>
+  <img src="gift.png" class="object">
 </div>
 
 <!-- SLIDE 2 -->
-<div class="slide from-inside">
-  <div class="photos">
-    <img src="pic1.jpg">
-    <img src="pic2.jpg">
-    <img src="pic3.jpg">
-    <img src="pic4.jpg">
-    <img src="pic5.jpg">
-  </div>
-  <div class="hearts"></div>
+<div class="slide">
+  <img src="photo.jpg" class="photo">
 </div>
 
 <!-- SLIDE 3 -->
-<div class="slide out-inside">
-  <div class="gift3d" style="transform:scale(0.7) rotateX(15deg) rotateY(-20deg)"></div>
-  <div class="hearts"></div>
+<div class="slide">
+  <img src="gift.png" class="object" style="max-width:35%;">
 </div>
 
 <!-- SLIDE 4 -->
 <div class="slide">
-  <div class="letter"></div>
-  <div class="hearts"></div>
+  <img src="letter.png" class="letter">
 </div>
 
 <!-- SLIDE 5 -->
-<div class="slide message-slide">
-  <div class="message" id="typeText"></div>
+<div class="slide">
+  <div class="message-box">
+    <div class="typewriter" id="text"></div>
+    <div class="final-love" id="love" style="display:none;">I LOVE YOU</div>
+    <div class="signature" id="sign" style="display:none;">YOURS "SAMRIDHI ❤👀"</div>
+  </div>
 </div>
 
 <script>
-let slides=document.querySelectorAll('.slide');
-let index=0;
+/* ---------- SLIDE NAV ---------- */
+const slides = document.querySelectorAll('.slide');
+let index = 0;
 
-/* NAVIGATION */
-document.querySelector('.nav.right').onclick=()=>{
-  if(index<slides.length-1){
-    slides[index].classList.remove('active');
-    index++;
-    slides[index].classList.add('active');
-    if(index===4) typeWriter();
-  }
-};
+function showSlide(newIndex, reverse=false){
+  if(newIndex<0 || newIndex>=slides.length) return;
+  slides[index].classList.remove('active');
+  slides[index].classList.add(reverse?'exit-right':'exit-left');
+  slides[newIndex].classList.remove('exit-left','exit-right');
+  slides[newIndex].classList.add('active');
+  index = newIndex;
+}
 
-document.querySelector('.nav.left').onclick=()=>{
-  if(index>0){
-    slides[index].classList.remove('active');
-    index--;
-    slides[index].classList.add('active');
-  }
-};
-
-/* HEARTS */
-document.querySelectorAll('.hearts').forEach(box=>{
-  for(let i=0;i<45;i++){
-    let h=document.createElement('div');
-    h.className='heart';
-    h.innerHTML='❤';
-    h.style.left=Math.random()*100+'%';
-    h.style.animationDelay=Math.random()*5+'s';
-    box.appendChild(h);
-  }
+document.addEventListener('click',e=>{
+  const mid = window.innerWidth/2;
+  if(e.clientX > mid) showSlide(index+1);
+  else showSlide(index-1,true);
 });
 
-/* TYPEWRITER */
-let text=`Kya likhu yrr🥹 i love youuuuuu alot yr 🥹 terko bta ne skti ye baat kyunki i know Tu merse pyr ne krta aur agr bta diya to friendship tut skti hai 🫠 to isliye nhi he btaungi kbhi. Tu itna acha h na yr , mera maan krta h bs terko he dekhti rhu like seriously agr Tu mere samne betha ho pure din k liye to m pure din terko he dekhti rhu🥹. Merko ne frk pdta ki tere ache dino me mai tere sath hu ya ne pr yr jab bhi thoda bhi kabhi low feel ho I'm always here for you 🫶 . M to chahti hu bs ki tu hmesha khush rhe , hamesha hste rhe❤. Tu bohot bohot important h yr mere liye. Pure din raat tere bare me he sochti rehti hu, kisi or k sath hoti hu tb b maan me tu he chla hota h🥹. Tere bina terko dekhe bina pta nhi kaise rhungi yr🥹🫠. Pehle mujhe lgta tha ki merko Tu bs vo as s friend type me he psnd h. M tere bare me sochti rehti thi hr time to m tb yhi sochti thi ki shyd hum roz baat krte h to bs attachment ho gyi hogi but ek din Maine terko dekha jb pta ne kyu pr mera terse nzre htane ka he maan ne krra tha🥹Or bs tbhi us din merko realise hogya ki nhi yr I genuinely love you🥹❤. Tu meri life me ho ya na ho yr lekin mere dil me hmesha rhega🥹Or es time feeling bohot real h sach me. Jaise i know ki tu merse pyaar ne krta but fir b m terse move on nhi krna chahti 🥹. M terko puri life time k liye pyaar krna chahti hu tere bare me he sochna chahti hu🥹🫶❤. Aj se kuch saal baad jb isko dekhu to khush hou ki haan yr jo bola tha vo aj bhi hai sb kuch❤. One sided love ki baat he kuch aur hoti h yr. Mai terko khush dekh k he khush ho jati hu 🌙. Pta he nhi chla yr kab mujhe terse itna pyaar hogya❤🥹. Or hua bhi aisa ki bs tu he hr trf dikhta h koi achi c pyaar wali reel aajaye to bs terko he imagine krti hu🩷. Itna pyara hai na yr tu🥹, bohot bohot bohot pyara lgta h mujhe tu🫠🫶. Soti hu to tere bare me soch k soti hu uth ti hu to pehla khyaal he tera atta h🫵🥹. Vo do din raat ko jo tere sath bitaye the I still remember those days🫠. Um.. Bohot ache din the vo🫶, tere sath bitaya hua hr din he acha tha pr vo do din were 'the best'❤. M chahti hu ki tu jb bhi kabhi apne liye koi partner choose krre , vo bhi terko bohot pyaar krre 🫶. Haan terko uske sath dekha to nhi jayega merse pr m selfish to nhi hu yr na he ban skti hu🥹, to bs tu jisko bhi pyaar krre vo terko hmesha khush rkhe tera khyaal rkhe ache se🫶. Tere liye mera pyaar jaisa abhi hai waisa he rhega hmesha , kabhi kum nhi hoga haan badh jrur skta h🫶. Meri hr ek pyaar wali story hr ek pyaar wala note tere liye he hota h. Kash Tu samjh skta ki kitna pyaar krti hu terse🥹. Terko to shyd pta b nhi hoga ki terko pyaar bhi krti hu 🥹🫶. Pr koi ni 🩷. Mera maan krta h bs tera hath pkd k tere sath ghumnti rhu, khin ek jagah beth k terko dekhti rhu🥹, m to yr hr din tere sath spend krna chahti hu pr I know ye to possible he nhi h❤️‍🩹🥹. Terko bohot jor se hug krne ka maan krta h yr🥹🥹🥹pr bol ne skti🫠. Kash yr tu bhi merko es way me dekhta jis way me mai dekhti hu🫠. Pr kya kr skte hai na yr 🥺. Bohot kuch hai mere pass to terko bolne ko pr abhi k liye itna he bohot hai. Pr ye jitna bhi hai meri feelings ka 30% hoga🥹 baki ka 70% fir kabhi bolungi🥹🫶. Bs yr I LOVE YOUUUUUUUUUUUUU🥹🥹❤❤🫠🫠🫶🫶`;
+/* ---------- HEARTS (80%) ---------- */
+const canvas = document.getElementById('hearts');
+const ctx = canvas.getContext('2d');
+let hearts=[];
+let runHearts=true;
 
-let i=0;
-function typeWriter(){
-  let el=document.getElementById('typeText');
-  let interval=setInterval(()=>{
-    let ch=text.charAt(i);
-    el.innerHTML+= ch==='\n' ? '<br>' : ch;
-    i++;
-    if(i>=text.length){
-      clearInterval(interval);
-      el.innerHTML+=`<div class="big-love">I LOVE YOU</div>
-      <div class="signature">YOURS "SAMRIDHI❤👀"</div>`;
-    }
-  },80);
+function resize(){
+  canvas.width=innerWidth;
+  canvas.height=innerHeight;
 }
+resize(); window.onresize=resize;
+
+function spawnHearts(color){
+  hearts=[];
+  for(let i=0;i<80;i++){
+    hearts.push({
+      x:Math.random()*canvas.width,
+      y:Math.random()*canvas.height,
+      s:Math.random()*6+4,
+      v:Math.random()*1.2+0.5,
+      c:color
+    });
+  }
+}
+
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  if(runHearts){
+    hearts.forEach(h=>{
+      ctx.fillStyle=h.c;
+      ctx.beginPath();
+      ctx.arc(h.x,h.y,h.s,0,Math.PI*2);
+      ctx.fill();
+      h.y-=h.v;
+      if(h.y<0) h.y=canvas.height;
+    });
+  }
+  requestAnimationFrame(draw);
+}
+spawnHearts("red");
+draw();
+
+/* ---------- TYPEWRITER ---------- */
+const message=`Kya likhu yrr🥹 i love youuuuuu alot yr 🥹 terko bta ne skti ye baat kyunki i know Tu merse pyr ne krta aur agr bta diya to friendship tut skti hai 🫠 to isliye nhi he btaungi kbhi. Tu itna acha h na yr , mera maan krta h bs terko he dekhti rhu like seriously agr Tu mere samne betha ho pure din k liye to m pure din terko he dekhti rhu🥹. Merko ne frk pdta ki tere ache dino me mai tere sath hu ya ne pr yr jab bhi thoda bhi kabhi low feel ho I'm always here for you 🫶 . M to chahti hu bs ki tu hmesha khush rhe , hamesha hste rhe❤. Tu bohot bohot important h yr mere liye. Pure din raat tere bare me he sochti rehti hu, kisi or k sath hoti hu tb b maan me tu he chla hota h🥹. Tere bina terko dekhe bina pta nhi kaise rhungi yr🥹🫠. Pehle mujhe lgta tha ki merko Tu bs vo as s friend type me he psnd h. M tere bare me sochti rehti thi hr time to m tb yhi sochti thi ki shyd hum roz baat krte h to bs attachment ho gyi hogi but ek din Maine terko dekha jb pta ne kyu pr mera terse nzre htane ka he maan ne krra tha🥹Or bs tbhi us din merko realise hogya ki nhi yr I genuinely love you🥹❤. Tu meri life me ho ya na ho yr lekin mere dil me hmesha rhega🥹Or es time feeling bohot real h sach me. Jaise i know ki tu merse pyaar ne krta but fir b m terse move on nhi krna chahti 🥹. M terko puri life time k liye pyaar krna chahti hu tere bare me he sochna chahti hu🥹🫶❤. Aj se kuch saal baad jb isko dekhu to khush hou ki haan yr jo bola tha vo aj bhi hai sb kuch❤. One sided love ki baat he kuch aur hoti h yr. Mai terko khush dekh k he khush ho jati hu 🌙. Pta he nhi chla yr kab mujhe terse itna pyaar hogya❤🥹. Or hua bhi aisa ki bs tu he hr trf dikhta h koi achi c pyaar wali reel aajaye to bs terko he imagine krti hu🩷. Itna pyara hai na yr tu🥹, bohot bohot bohot pyara lgta h mujhe tu🫠🫶. Soti hu to tere bare me soch k soti hu uth ti hu to pehla khyaal he tera atta h🫵🥹. Vo do din raat ko jo tere sath bitaye the I still remember those days🫠. Um.. Bohot ache din the vo🫶, tere sath bitaya hua hr din he acha tha pr vo do din were 'the best'❤. M chahti hu ki tu jb bhi kabhi apne liye koi partner choose krre , vo bhi terko bohot pyaar krre 🫶. Haan terko uske sath dekha to nhi jayega merse pr m selfish to nhi hu yr na he ban skti hu🥹, to bs tu jisko bhi pyaar krre vo terko hmesha khush rkhe tera khyaal rkhe ache se🫶. Tere liye mera pyaar jaisa abhi hai waisa he rhega hmesha , kabhi kum nhi hoga haan badh jrur skta h🫶. Meri hr ek pyaar wali story hr ek pyaar wala note tere liye he hota h. Kash Tu samjh skta ki kitna pyaar krti hu terse🥹. Terko to shyd pta b nhi hoga ki terko pyaar bhi krti hu 🥹🫶. Pr koi ni 🩷. Mera maan krta h bs tera hath pkd k tere sath ghumnti rhu, khin ek jagah beth k terko dekhti rhu🥹, m to yr hr din tere sath spend krna chahti hu pr I know ye to possible he nhi h❤️‍🩹🥹. Terko bohot jor se hug krne ka maan krta h yr🥹🥹🥹pr bol ne skti🫠. Kash yr tu bhi merko es way me dekhta jis way me mai dekhti hu🫠. Pr kya kr skte hai na yr 🥺. Bohot kuch hai mere pass to terko bolne ko pr abhi k liye itna he bohot hai. Pr ye jitna bhi hai meri feelings ka 30% hoga🥹 baki ka 70% fir kabhi bolungi🥹🫶. Bs yr I LOVE YOUUUUUUUUUUUUU🥹🥹❤❤🫠🫠🫶🫶.`;
+
+const textBox=document.getElementById("text");
+let i=0;
+function type(){
+  if(i<message.length){
+    const span=document.createElement("span");
+    span.style.animationDelay="0s";
+    span.textContent=message[i];
+    textBox.appendChild(span);
+    i++;
+    setTimeout(type,40);
+  }else{
+    runHearts=false;
+    document.getElementById("love").style.display="block";
+    document.getElementById("sign").style.display="block";
+  }
+}
+
+/* start typing only on slide 5 */
+slides[4].addEventListener('transitionend',()=>{
+  spawnHearts("pink");
+  runHearts=true;
+  type();
+});
 </script>
 
 </body>
-  </html>
+</html>
